--- a/cmd/server/history
+++ b/cmd/server/history
@@ -70,3 +70,59 @@
 {"ID":"Frees","type":"counter","delta":4842}
 {"ID":"HeapSys","type":"gauge","value":4030464}
 {"ID":"StackSys","type":"gauge","value":163840}
+{"ID":"HeapReleased","type":"gauge","value":3088384}
+{"ID":"MCacheInuse","type":"gauge","value":14016}
+{"ID":"GCSys","type":"counter","delta":0}
+{"ID":"Frees","type":"counter","delta":0}
+{"ID":"HeapAlloc","type":"gauge","value":421576}
+{"ID":"Lookups","type":"gauge","value":0}
+{"ID":"MCacheSys","type":"gauge","value":16384}
+{"ID":"Alloc","type":"gauge","value":421576}
+{"ID":"HeapIdle","type":"gauge","value":3096576}
+{"ID":"HeapInuse","type":"gauge","value":966656}
+{"ID":"PauseTotalNs","type":"gauge","value":0}
+{"ID":"StackSys","type":"gauge","value":131072}
+{"ID":"Sys","type":"gauge","value":6967504}
+{"ID":"RandomValue","type":"gauge","value":0.4246374970712657}
+{"ID":"LastGC","type":"counter","delta":0}
+{"ID":"MSpanInuse","type":"gauge","value":20400}
+{"ID":"Mallocs","type":"gauge","value":2420}
+{"ID":"NumForcedGC","type":"gauge","value":0}
+{"ID":"NumGC","type":"gauge","value":0}
+{"ID":"OtherSys","type":"gauge","value":836415}
+{"ID":"GCCPUFraction","type":"gauge","value":0}
+{"ID":"HeapSys","type":"gauge","value":4063232}
+{"ID":"MSpanSys","type":"gauge","value":32768}
+{"ID":"NextGC","type":"gauge","value":4473924}
+{"ID":"BuckHashSys","type":"gauge","value":5233}
+{"ID":"HeapObjects","type":"counter","delta":0}
+{"ID":"StackInuse","type":"gauge","value":131072}
+{"ID":"PollCount","type":"counter","delta":0}
+{"ID":"HeapSys","type":"gauge","value":4030464}
+{"ID":"MSpanSys","type":"gauge","value":49152}
+{"ID":"NextGC","type":"gauge","value":4473924}
+{"ID":"BuckHashSys","type":"gauge","value":5233}
+{"ID":"HeapObjects","type":"counter","delta":0}
+{"ID":"StackInuse","type":"gauge","value":163840}
+{"ID":"PollCount","type":"counter","delta":0}
+{"ID":"HeapReleased","type":"gauge","value":2400256}
+{"ID":"MCacheInuse","type":"gauge","value":14016}
+{"ID":"GCSys","type":"counter","delta":0}
+{"ID":"Frees","type":"counter","delta":0}
+{"ID":"HeapAlloc","type":"gauge","value":792816}
+{"ID":"Lookups","type":"gauge","value":0}
+{"ID":"MCacheSys","type":"gauge","value":16384}
+{"ID":"StackSys","type":"gauge","value":163840}
+{"ID":"Sys","type":"gauge","value":6967504}
+{"ID":"RandomValue","type":"gauge","value":0.30091186058528707}
+{"ID":"Alloc","type":"gauge","value":792816}
+{"ID":"HeapIdle","type":"gauge","value":2433024}
+{"ID":"HeapInuse","type":"gauge","value":1597440}
+{"ID":"PauseTotalNs","type":"gauge","value":0}
+{"ID":"NumGC","type":"gauge","value":0}
+{"ID":"OtherSys","type":"gauge","value":764519}
+{"ID":"LastGC","type":"counter","delta":0}
+{"ID":"MSpanInuse","type":"gauge","value":37808}
+{"ID":"Mallocs","type":"gauge","value":5202}
+{"ID":"NumForcedGC","type":"gauge","value":0}
+{"ID":"GCCPUFraction","type":"gauge","value":0}
