--- a/cmd/server/history
+++ b/cmd/server/history
@@ -126,3 +126,58 @@
 {"ID":"Mallocs","type":"gauge","value":5202}
 {"ID":"NumForcedGC","type":"gauge","value":0}
 {"ID":"GCCPUFraction","type":"gauge","value":0}
+{"ID":"MCacheInuse","type":"gauge","value":14016}
+{"ID":"OtherSys","type":"gauge","value":557535}
+{"ID":"Alloc","type":"gauge","value":423880}
+{"ID":"BuckHashSys","type":"gauge","value":1445577}
+{"ID":"Lookups","type":"gauge","value":0}
+{"ID":"Mallocs","type":"gauge","value":2430}
+{"ID":"RandomValue","type":"gauge","value":0.4246374970712657}
+{"ID":"HeapReleased","type":"gauge","value":2842624}
+{"ID":"MCacheSys","type":"gauge","value":16384}
+{"ID":"NextGC","type":"gauge","value":4473924}
+{"ID":"MSpanSys","type":"gauge","value":49152}
+{"ID":"NumForcedGC","type":"gauge","value":0}
+{"ID":"NumGC","type":"gauge","value":0}
+{"ID":"GCSys","type":"counter","delta":0}
+{"ID":"Frees","type":"counter","delta":0}
+{"ID":"HeapSys","type":"gauge","value":4030464}
+{"ID":"StackInuse","type":"gauge","value":163840}
+{"ID":"GCCPUFraction","type":"gauge","value":0}
+{"ID":"HeapAlloc","type":"gauge","value":423880}
+{"ID":"PauseTotalNs","type":"gauge","value":0}
+{"ID":"LastGC","type":"counter","delta":0}
+{"ID":"MSpanInuse","type":"gauge","value":37808}
+{"ID":"StackSys","type":"gauge","value":163840}
+{"ID":"Sys","type":"gauge","value":8145352}
+{"ID":"HeapIdle","type":"gauge","value":2875392}
+{"ID":"HeapInuse","type":"gauge","value":1155072}
+{"ID":"HeapObjects","type":"counter","delta":0}
+{"ID":"MCacheInuse","type":"gauge","value":14016}
+{"ID":"MCacheSys","type":"gauge","value":16384}
+{"ID":"MSpanSys","type":"gauge","value":49152}
+{"ID":"PauseTotalNs","type":"gauge","value":0}
+{"ID":"Sys","type":"gauge","value":8407496}
+{"ID":"HeapObjects","type":"counter","delta":0}
+{"ID":"HeapReleased","type":"gauge","value":2826240}
+{"ID":"HeapSys","type":"gauge","value":4030464}
+{"ID":"Mallocs","type":"gauge","value":2425}
+{"ID":"NumForcedGC","type":"gauge","value":0}
+{"ID":"HeapAlloc","type":"gauge","value":423896}
+{"ID":"HeapIdle","type":"gauge","value":2859008}
+{"ID":"Lookups","type":"gauge","value":0}
+{"ID":"PollCount","type":"counter","delta":1}
+{"ID":"MSpanInuse","type":"gauge","value":37808}
+{"ID":"NextGC","type":"gauge","value":4473924}
+{"ID":"NumGC","type":"gauge","value":0}
+{"ID":"RandomValue","type":"gauge","value":0.4246374970712657}
+{"ID":"StackInuse","type":"gauge","value":163840}
+{"ID":"StackSys","type":"gauge","value":163840}
+{"ID":"BuckHashSys","type":"gauge","value":1446193}
+{"ID":"GCCPUFraction","type":"gauge","value":0}
+{"ID":"HeapInuse","type":"gauge","value":1171456}
+{"ID":"OtherSys","type":"gauge","value":819063}
+{"ID":"Alloc","type":"gauge","value":423896}
+{"ID":"GCSys","type":"counter","delta":0}
+{"ID":"Frees","type":"counter","delta":0}
+{"ID":"LastGC","type":"counter","delta":0}
